--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button onclick="emailChecker()">Submit</button>
     <p id="validEmail"></p>
     <p>Password:</p>
-    <button onclick="hidePass()">Hide password</button>
+    <button>Hide password</button>
     <input type="text" name="password" id="password" onchange="passwordChecker()" />
     <button onclick="passwordChecker()">Submit</button>
     <p id="validPass"></p>
