--- a/product page/index.html
+++ b/product page/index.html
@@ -1,11 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    div.container
-</body>
-</html>
+<html>
+    <head>
+    <script type="text/javascript">
+    function jump(elmnt,content)
+    {
+    document.addEventListener('keyup', function(event) {
+
+    if (event.keyCode == 13)
+        {
+
+        next=elmnt.tabIndex+1;
+        document.jumpForm.elements[next].focus()
+        }
+
+    });
+    }
+    </script>
+    </head>
+    <body>
+    <p>This script automatically jumps to the next input field when the current field's maxlength has been reached.</p>
+    <form name="jumpForm">
+    <select style = "border: 4px solid red;" name = "typ" tabindex="0" onkeyup="jump(this,this.value)">
+                            <option value = "+">Zugang</option>
+                            <option value = "-">Abgang</option>
+                            <option value = "b">Bruchware</option>
+                            <option value = "x">Lagerort löschen</option>
+                        </select>
+    <input size="3" tabindex="1" onkeyup="jump(this,this.value)">
+    <input size="3" tabindex="2" onkeyup="jump(this,this.value)">
+    <input size="3" tabindex="3" onkeyup="jump(this,this.value)">
+    </form>
+    </body>
+    </html>
